packages/svelte/tests/validator/samples/tag-non-string/input.svelte
<svelte:options customElement={42}/>
