packages/svelte/tests/compiler-errors/samples/attribute-unique-class/main.svelte
<div class:cool={true} class:cool={true}></div>